crates/zeph-tools/src/filter/snapshots/zeph_tools__filter__declarative__tests__cargo_build_error_snapshot.snap
---
source: crates/zeph-tools/src/filter/declarative.rs
expression: result.output
---
(1 noise lines removed)

error[E0308]: mismatched types
  --> crates/zeph-core/src/lib.rs:10:5
   |
10 |     return 42;
   |            ^^ expected `()`, found integer
error: could not compile `zeph-core` due to 1 previous error
